# ableton-mcp2

./: Mastering.md  README.md  pyproject.toml
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: rest_api_server.py
ableton-memory/: README.md  master-chain.md  plugins.md  presets.md
